<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundCream"
    tools:context=".MainActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:ignore="ExtraText"
    android:padding="16dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:text="@string/calculate_your"
            android:textAllCaps="false"
            android:textColor="@color/text1Orange"
            android:textSize="36sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/age"
            android:textAllCaps="false"
            android:textColor="@color/text1Orange"
            android:textSize="36sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textViewOfAgeUnit1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/in_minutes"
            android:textAllCaps="false"
            android:textColor="@color/text1Orange"
            android:textSize="36sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnAgeUnitModifier"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/buttonBgBlue"
            android:textColor="@color/white"
            android:text= "@string/changeAgeUnit"
            android:textSize="36sp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/textViewOfDateOfBirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dd_mm_yyyy"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_of_birth"
            android:textAllCaps="false"
            android:textColor="@color/dateWhite"
            android:textSize="22sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textViewOfAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/_0"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textViewOfAgeUnit2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in_minutes"
            android:textAllCaps="false"
            android:textColor="@color/dateWhite"
            android:textSize="22sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnForDatePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:backgroundTint="@color/white"
            android:text="@string/select_date"/>
    </LinearLayout>

</LinearLayout>